--- a/Institute.html
+++ b/Institute.html
@@ -65,6 +65,24 @@
 </head>
 
 <body>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Service",
+      "serviceType": "Digital Marketing Institute",
+      "description": "At Kreative Kudi Digital Marketing Institute, we're passionate about empowering individuals and businesses with the knowledge and skills they need to thrive in the digital age. Our institute is a hub of creativity and innovation, where we blend cutting-edge digital marketing techniques with a creative approach to help you stand out in the online landscape",
+      "provider": {
+        "@type": "LocalBusiness",
+        "name": "kreative kudi digital marketing institute"
+      },
+      "offers": {
+        "@type": "Offer",
+        "price": "5000",
+        "availability": "https://schema.org/InStock"
+      }
+    }
+    </script>
+
 
 
 
