--- a/Owner.html
+++ b/Owner.html
@@ -65,6 +65,25 @@
 
 <body>
 
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "name": "kreative kudi digital marketing company",
+          "logo": "https://i.ibb.co/qdJPGb6/b-logo.png",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+918160581704",
+            "contactType": "customer service"
+          },
+          "sameAs": [
+            "https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/",
+            "https://www.instagram.com/kreativekudi_digitalmarketing/",
+            "https://www.facebook.com/kreativekudi"
+          ]
+        }
+    </script>
+
 
     <!-- ==================== Start Loading ==================== -->
 
