--- a/about.html
+++ b/about.html
@@ -65,6 +65,44 @@
 
 <body>
 
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Organization",
+          "name": "kreative kudi digital marketing company",
+          "logo": "https://i.ibb.co/qdJPGb6/b-logo.png",
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+918160581704",
+            "contactType": "customer service"
+          },
+          "sameAs": [
+            "https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/",
+            "https://www.instagram.com/kreativekudi_digitalmarketing/",
+            "https://www.facebook.com/kreativekudi"
+          ]
+        }
+        </script>
+
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Service",
+          "serviceType": "Digital Marketing",
+          "description": "At Kreative Kudi, we're dedicated to helping businesses and individuals thrive online. Our services span captivating website design, precision-targeted PPC campaigns, engaging social media marketing, and captivating graphic design. With data-driven strategies, we optimize for success. Join us on the journey where creativity meets strategy, crafting digital success stories that make a real impact",
+          "provider": {
+            "@type": "LocalBusiness",
+            "name": "kreative kudi digital marketing company"
+          },
+          "offers": {
+            "@type": "Offer",
+            "price": "5000/Month",
+            "availability": "https://schema.org/InStock"
+          }
+        }
+        </script>
+
+
 
     <!-- ==================== Start Loading ==================== -->
 
