--- a/article1.html
+++ b/article1.html
@@ -65,6 +65,25 @@
 
 <body>
 
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Article",
+          "headline": "WHAT IS "DIGITAL MARKETING",
+          "description": "By utilising electronic devices to convey promotional messaging, marketing specialists can measure the impact of marketing on the customer journey. A digital marketing campaign refers to products and services on tablets, computer screens, phones, and other devices. Many different forms of advertising exist, including display ads, paid social ads, search engine marketing, online videos, and social media posts.",
+          "datePublished": "2020-10-16",
+          "author": {
+            "@type": "Person",
+            "name": "pooja jain"
+          },
+          "publisher": {
+            "@type": "Organization",
+            "name": "kreative kudi digital marketing company",
+            "logo": "https://i.ibb.co/qdJPGb6/b-logo.png"
+          }
+        }
+    </script>
+
 
     <!-- ==================== Start Loading ==================== -->
 
@@ -175,7 +194,7 @@
                     <div class="col-lg-7 col-md-9">
                         <div class="cont text-center">
                             <h1 class="mb-10 color-font">Article</h1>
-                            <h2>1~WHAT IS "DIGITAL MARKETING"</h2>
+                            <h2>WHAT IS "DIGITAL MARKETING"</h2>
                             <p>THE ECONOMIC TIMES</p>
                         </div>
                     </div>
