--- a/article2.html
+++ b/article2.html
@@ -65,6 +65,25 @@
 
 <body>
 
+    <script type="application/ld+json">
+            {
+              "@context": "http://schema.org",
+              "@type": "Article",
+              "headline": "Digital Marketing Growth in India in 2023",
+              "description": "The emergence of digital marketing & the digital marketing growth in India is certainly very interesting facts. A few years back, the concept of “Digital Marketing” was not such a popular phenomenon towards half of the nation, but gradually the change has started to take place. The human mind has started to think technically even the marketing strategy, resulting in an interesting story of digital marketing growth in India.",
+              "datePublished": "2020-10-16",
+              "author": {
+                "@type": "Person",
+                "name": "pooja jain"
+              },
+              "publisher": {
+                "@type": "Organization",
+                "name": "kreative kudi digital marketing company",
+                "logo": "https://i.ibb.co/qdJPGb6/b-logo.png"
+              }
+            }
+    </script>
+
 
     <!-- ==================== Start Loading ==================== -->
 
@@ -175,7 +194,7 @@
                     <div class="col-lg-7 col-md-9">
                         <div class="cont text-center">
                             <h1 class="mb-10 color-font">Article</h1>
-                            <h2>2~Digital Marketing Growth in
+                            <h2>Digital Marketing Growth in
                                 India in 2023.</h2>
                             <P>IIM SKILLS</P>
                         </div>
