--- a/article3.html
+++ b/article3.html
@@ -65,6 +65,25 @@
 
 <body>
 
+    <script type="application/ld+json">
+                    {
+                      "@context": "http://schema.org",
+                      "@type": "Article",
+                      "headline": "The Post-Pandemic Rise of Digital Marketing in India",
+                      "description": "The age of digital marketing has arrived. The proliferation of e-commerce has made it essential for brick-and-mortar stores to adopt digital marketing strategies.",
+                      "datePublished": "2020-10-16",
+                      "author": {
+                        "@type": "Person",
+                        "name": "pooja jain"
+                      },
+                      "publisher": {
+                        "@type": "Organization",
+                        "name": "kreative kudi digital marketing company",
+                        "logo": "https://i.ibb.co/qdJPGb6/b-logo.png"
+                      }
+                    }
+    </script>
+
 
     <!-- ==================== Start Loading ==================== -->
 
@@ -175,7 +194,7 @@
                     <div class="col-lg-7 col-md-9">
                         <div class="cont text-center">
                             <h1 class="mb-10 color-font">Article</h1>
-                            <h2>3~The Post-Pandemic Rise of Digital Marketing in India.</h2>
+                            <h2>The Post-Pandemic Rise of Digital Marketing in India.</h2>
                             <P>DECCAN HERALD</P>
                         </div>
                     </div>
