--- a/articles.html
+++ b/articles.html
@@ -66,6 +66,26 @@
 
 <body>
 
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Article",
+      "headline": "kreative kudi blog posts",
+      "description": "All the most current news and events on Digital Marketing",
+      "datePublished": "2020-10-16",
+      "author": {
+        "@type": "Person",
+        "name": "pooja jain"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "kreative kudi digital marketing company",
+        "logo": "https://i.ibb.co/qdJPGb6/b-logo.png"
+      }
+    }
+    </script>
+
+
 
     <!-- ==================== Start Loading ==================== -->
 
