--- a/contact.html
+++ b/contact.html
@@ -65,6 +65,26 @@
 
 <body>
 
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "LocalBusiness",
+      "name": "kreative kudi digital marketing company & institute",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Satya two,near Bharat Petroleum, Shastrinagar, Naranpura,",
+        "addressLocality": "Ahmedabad",
+        "addressRegion": "Gujarat",
+        "postalCode": "380013"
+      },
+      "telephone": "+918160581704",
+      "openingHours": "Mo-Fr 09:00-17:00",
+      "priceRange": "5000/Month",
+      "sameAs": "https://kreativekudi.com"
+    }
+    </script>
+
+
     <!-- ==================== Start Loading ==================== -->
 
     <div class="loading">
