--- a/index.html
+++ b/index.html
@@ -65,6 +65,116 @@
 
 <body>
 
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "name": "kreative kudi digital marketing company",
+      "logo": "https://i.ibb.co/qdJPGb6/b-logo.png",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+918160581704",
+        "contactType": "customer service"
+      },
+      "sameAs": [
+        "https://www.linkedin.com/company/kreative-kudi-digital-marketing-agency/",
+        "https://www.instagram.com/kreativekudi_digitalmarketing/",
+        "https://www.facebook.com/kreativekudi"
+      ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "item": {
+            "@id": "https://www.kreativekudi.com",
+            "name": "Home"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "item": {
+            "@id": "https://kreativekudi.com/Institute",
+            "name": "Institute"
+          }
+        }
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "item": {
+            "@id": "https://kreativekudi.com/about",
+            "name": "About us"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 4,
+          "item": {
+            "@id": "https://kreativekudi.com/portfolio",
+            "name": "portfolio"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 5,
+          "item": {
+            "@id": "https://kreativekudi.com/articles",
+            "name": "Articles"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 6,
+          "item": {
+            "@id": "https://kreativekudi.com/Owner",
+            "name": "Founder & CEo"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 7,
+          "item": {
+            "@id": "https://kreativekudi.com/contact",
+            "name": "Contact us"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 8,
+          "item": {
+            "@id": "https://kreativekudi.com/article1",
+            "name": "Blog-What is Digital Marketing"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 9,
+          "item": {
+            "@id": "https://kreativekudi.com/article2",
+            "name": "Blog-Digital Marketing Growth in India in 2023"
+          }
+        },
+        {
+          "@type": "ListItem",
+          "position": 10,
+          "item": {
+            "@id": "https://kreativekudi.com/article3",
+            "name": "Blog-The Post-Pandemic Rise of Digital Marketing in India"
+          }
+        }
+      ]
+    }
+    </script>
+
+
+
 
     <!-- ==================== Start Loading ==================== -->
 
@@ -107,6 +217,7 @@
 
 
     <!-- ==================== Start Navbar ==================== -->
+
 
     <nav class="navbar navbar-expand-lg">
         <div class="container">
