--- a/portfolio.html
+++ b/portfolio.html
@@ -65,6 +65,23 @@
 
 <body>
 
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "CreativeWork",
+      "name": "Graphics Design portfolio",
+      "description": "Welcome to the Kreative Kudi Digital Marketing Company portfolio, where we take pride in our passion for all things digital marketing. Our portfolio is a testament to our commitment to crafting compelling visual stories, creating memorable logos, and executing successful digital marketing campaigns. Explore our gallery to see how we transform ideas into impactful design and marketing strategies. With a focus on creativity, tailored solutions, and a dedication to your brand's unique journey, we're here to help you stand out in the digital landscape. If you're ready to elevate your brand and achieve your marketing goals, reach out to us to start a conversation about the endless possibilities.",
+      "image": "https://kreativekudi.com/portfolio",
+      "url": "https://kreativekudi.com/portfolio.html",
+      "datePublished": "2020-10-16",
+      "author": {
+        "@type": "Person",
+        "name": "pooja jain"
+      }
+    }
+    </script>
+
+
 
     <!-- ==================== Start Loading ==================== -->
 
