--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
         <!-- ==================== End clients Brands ==================== -->
         <!-- ==================== Start About ==================== -->
 
-        <section class="feat sub-bg section-padding">
+        <!--section class="feat sub-bg section-padding">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10">
@@ -939,7 +939,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section--->
 
         <!-- ==================== End About ==================== -->
 
